compiler/tests/compiler/must_fail/t_05.mil.exp.err
tests/compiler/must_fail/t_05.mil:2:3: 2:7 error: expected identifier, not array get
  _x[i] : stack u64;
  ^^^^^
